# bitcask-clone

./: .gitignore  CMakeLists.txt  README.md  kv.db
include/: db.hpp
nocacherun1.trace/: form.template  open.creq
nocacherun1.trace/Trace0.run/: RunIssues.storedata
nocacherun1.trace/Trace1.run/: RunIssues.storedata
nocacherun1.trace/corespace/: MANIFEST.plist
nocacherun1.trace/corespace/run1/core/core-config/: exposedTableInfo.plist
nocacherun1.trace/corespace/run1/core/stores/indexed-store-0/: bulkstore  bulkstore_descriptor  spindex.0
nocacherun1.trace/corespace/run1/core/stores/indexed-store-2/: bulkstore  bulkstore_descriptor  spec.plist  spindex.0
nocacherun1.trace/corespace/run1/core/stores/indexed-store-3/: bulkstore  bulkstore_descriptor  spec.plist  spindex.0
nocacherun1.trace/corespace/run1/core/table-manager/: tables.plist
nocacherun1.trace/corespace/run1/core/uniquing/: strings
nocacherun1.trace/instrument_data/0D76DA8C-503A-41D8-AD91-5E48DF5C952B/run_data/: 1.run
nocacherun1.trace/symbols/stores/: 13597EEB-2EA0-3D48-8BE1-DFC4872A784B.symbolsarchive  25B2F3EB-07B4-3CB9-9457-2C26210C27C8.symbolsarchive  7BDF3A7B-2E48-32AA-9DF0-25565AB498BE.symbolsarchive  81CF0F0E-9A4D-3C0A-8D2A-DF60EFD8E30E.symbolsarchive  93FB3816-608B-33AF-83D2-209B4BD673AD.symbolsarchive  A1566D80-DC2E-365D-A046-5E29E983910F.symbolsarchive  ACDE8386-EB3F-36F2-BC5E-069CC59D079C.symbolsarchive  BAA6F02E-DFF3-3562-8C99-EA2820C91AD9.symbolsarchive  E443AF07-488B-3B1B-83AE-31BD883E6EF1.symbolsarchive
src/: db.cpp  main.cpp
test/: l1cache_benchmark.cpp
(+15 files in other folders)
